--- a/src/main/properties/application-production.properties
+++ b/src/main/properties/application-production.properties
@@ -14,9 +14,9 @@
 # HINT+ - server.servlet.contextPath
 # HINT+ - server.port
 
-spring.datasource.url							= jdbc:mysql://b7aqaogl5y7w4ixjl8jl-mysql.services.clever-cloud.com:3306/b7aqaogl5y7w4ixjl8jl?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username						= ut7j0samrjhkil6o
-spring.datasource.password						= NkVzCea3JsuDFu9y0wTT
+spring.datasource.url							= jdbc:mysql://bj8qg9mvjlklyyefikcp-mysql.services.clever-cloud.com:3306/bj8qg9mvjlklyyefikcp?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username						= uo9ienl97ahc06xo
+spring.datasource.password						= pDqEsyZHblV5z6sOoxrl
 
 spring.jpa.hibernate.show-sql					= false
 spring.jpa.hibernate.format-sql					= false
