--- a/src/main/properties/application-production.properties
+++ b/src/main/properties/application-production.properties
@@ -14,9 +14,9 @@
 # HINT+ - server.servlet.contextPath
 # HINT+ - server.port
 
-spring.datasource.url							= jdbc:mysql://bj8qg9mvjlklyyefikcp-mysql.services.clever-cloud.com:3306/bj8qg9mvjlklyyefikcp?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username						= uo9ienl97ahc06xo
-spring.datasource.password						= pDqEsyZHblV5z6sOoxrl
+spring.datasource.url							= jdbc:mysql://bola9cppnrbwxagcsegu-mysql.services.clever-cloud.com:3306/bola9cppnrbwxagcsegu?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username						= usyodlund4gmmnu7
+spring.datasource.password						= sSBAZ6kstk2CkOdFupX6
 
 spring.jpa.hibernate.show-sql					= false
 spring.jpa.hibernate.format-sql					= false
