--- a/src/main/properties/application-production.properties
+++ b/src/main/properties/application-production.properties
@@ -14,9 +14,9 @@
 # HINT+ - server.servlet.contextPath
 # HINT+ - server.port
 
-spring.datasource.url							= jdbc:mysql://bb3uspft9vazu3ivmr6r-mysql.services.clever-cloud.com:3306/bb3uspft9vazu3ivmr6r?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
-spring.datasource.username						= u6zw8g9jocvcuxku
-spring.datasource.password						= eRRgfDOLWeE0BFI7Wo1R
+spring.datasource.url							= jdbc:mysql://bhiqcz5bbrhbo9y4ygyx-mysql.services.clever-cloud.com:3306/bhiqcz5bbrhbo9y4ygyx?useSSL=false&allowPublicKeyRetrieval=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username						= uhkyavhipkjoe2zu
+spring.datasource.password						= ujc9mRkfgkUJ53hcrMBQ
 
 spring.jpa.hibernate.show-sql					= false
 spring.jpa.hibernate.format-sql					= false
